L3 Info/Compilation/TD4/td_4/etf_parser/Parser.mly
%token ADD SUB
%token MUL DIV REC
%token LPAR RPAR
%token <int> INT
%token EOF

%start <unit> main

%%

main:
| e EOF       {}
| EOF         {}

e:
| e ADD t       {}
| SUB t         {}
| t             {}

t:
| t MUL f       {}
| t DIV f       {}
| t REC         {}
| f             {}

f:
| LPAR e RPAR   {}
| INT           {}
